--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
+  image_picker: ^0.8.2
 
 
 dev_dependencies:
